syntax = "proto3";

option go_package = "pb/game";

import "common/db_base.proto";
import "common/user_accounts.proto";
import "common/comp.proto";
import "logic/component/player_scene_comp.proto";
import "logic/component/actor_comp.proto";
import "logic/component/player_comp.proto";
import "logic/component/player_skill_comp.proto";

/////////////         game
message user_accounts
{
  option(OptionPrimaryKey) = "account";
  string account = 1;
  string password = 2;
  AccountSimplePlayerList simple_players = 3;
}

message account_share_database
{
  option(OptionPrimaryKey) = "account";
  string account = 1;
}

//中心服玩家专用数据
message player_centre_database
{
  option(OptionPrimaryKey) = "player_id";
  option(OptionAutoIncrementKey) = "player_id";
  uint64 player_id = 1;
  PlayerSceneContextPBComponent scene_info = 2;
}

//玩家数据库表1,重要数据放这里，不重要数据放另外一个表，(重要:比如金钱，跟收入有关)，登录马上加载
message player_database
{
  option(OptionPrimaryKey) = "player_id";
  option(OptionAutoIncrementKey) = "player_id";
  uint64 player_id = 1;
  Transform transform = 2;
  PlayerUint64PBComponent uint64_pb_component = 3;
  PlayerSkillListPBComponent skill_list = 4;
  PlayerUint32PBComponent uint32_pb_component = 5;
}

message player_database_1
{
  option(OptionPrimaryKey) = "player_id";
  option(OptionAutoIncrementKey) = "player_id";
  uint64 player_id = 1;
}

